--- a/node1/Dockerfile
+++ b/node1/Dockerfile
@@ -1,5 +1,6 @@
 FROM quorumengineering/quorum:2.5.0
-WORKDIR /root/nodedata
+WORKDIR /qnode
+ADD genesis.json .
 ADD nodekey .
 ADD enode .
 ADD keystore keystore/
@@ -8,5 +9,6 @@ ADD pp.txt .
 ADD static-nodes.json .
 ADD start.sh .
 EXPOSE 9501
-RUN ["chmod", "+x", "/root/nodedata/start.sh"]
-ENTRYPOINT ["/bin/sh", "/root/nodedata/start.sh"]
+RUN ["ls"]
+RUN ["chmod", "+x", "/qnode/start.sh"]
+ENTRYPOINT ["/bin/sh", "/qnode/start.sh"]
