--- a/txnode1/config.json
+++ b/txnode1/config.json
@@ -3,26 +3,26 @@
 	"jdbc": {
 		"username": "sa",
 		"password": "",
-		"url": "jdbc:h2:/yourpath/new-node-1t/db1;MODE=Oracle;TRACE_LEVEL_SYSTEM_OUT=0",
+		"url": "jdbc:h2:./db;MODE=Oracle;TRACE_LEVEL_SYSTEM_OUT=0",
 		"autoCreateTables": true
 	},
 	"serverConfigs":[
 		{
 			"app":"ThirdParty",
 			"enabled": true,
-			"serverAddress": "http://localhost:9081",
+			"serverAddress": "http://172.16.1.2:9081",
 			"communicationType" : "REST"
 		},
 		{
 			"app":"Q2T",
 			"enabled": true,
-			 "serverAddress":"unix:/yourpath/new-node-1t/tm.ipc",
+			 "serverAddress":"unix:/qtxnode/tm/tm.ipc",
 			"communicationType" : "REST"
 		},
 		{
 			"app":"P2P",
 			"enabled": true,
-			"serverAddress":"http://localhost:9001",
+			"serverAddress":"http://172.16.1.2:9001",
 			"sslConfig": {
 				"tls": "OFF"
 			},
@@ -31,11 +31,11 @@
 	],
 	"peer": [
 		{
-			"url": "http://localhost:9001"
+			"url": "http://172.16.1.2:9001"
 		}
 	],
 	"keys": {
-		"passwords": [],
+		"passwordFile": ["pass.txt"],
 		"keyData": [
 			{
 				"privateKeyPath": "txnode1.key",
